<resources>
    <string name="app_name">Lost and Found App</string>
    <string name="create_a_new_advert">CREATE A NEW ADVERT</string>
    <string name="show_all_lost_found_items"><![CDATA[SHOW ALL LOST & FOUND ITEMS]]></string>
    <string name="post_type">Post type:</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="date">Date:</string>
    <string name="location">Location:</string>
    <string name="lost_found_items"><![CDATA[LOST & FOUND ITEMS]]></string>
    <string name="remove">REMOVE</string>
    <string name="get_current_location">GET CURRENT LOCATION</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="show_on_map">SHOW ON MAP</string>
</resources>