<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/createBtn"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="20dp"
        android:text="@string/create_a_new_advert"
        android:background="@drawable/button_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showBtn"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        android:text="@string/show_all_lost_found_items"
        android:background="@drawable/button_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBtn" />

    <Button
        android:id="@+id/mapBtn"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        android:text="@string/show_on_map"
        android:background="@drawable/button_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>